--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "homepage": "https://github.com/Luka-Teng/leact#readme",
   "devDependencies": {
+    "@babel/core": "^7.8.4",
+    "@babel/register": "^7.8.3",
     "babel-eslint": "^10.0.3",
     "eslint": "5.6.0",
     "eslint-config-react-app": "^3.0.4",
